--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "excel2jsonschema",
   "description": "Utility module which generates JSON Schema from Excel Spread sheet",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
   "author": "pponugo",
   "repository": {
-    "type": "",
-    "url": ""
+    "type": "git",
+    "url": "https://github.com/pponugo/excel2jsonschema"
   },
   "keywords": [
     "JSON",
