added feature to generate example json along with schema

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "xlsx",
     "Spreadsheet"
   ],
-  "main": "index.js",
+  "main": "./lib/excel2jsonschema.js",
   "scripts": {
     "build": "gulp default"
   },
